# Data_Engineering_Zoomcamp

airflow_infrastructure/: docker-compose.yml
airflow_infrastructure/dags/: energy_dag.py  energy_ingestion_dag.py  weather_forecast_dag.py
airflow_infrastructure/dags/utils/: task_factory.py
de-zoomcamp-kestra/docker/: docker-compose.yml
de-zoomcamp-kestra/flows/: 01_green_taxi_etl.yaml
de-zoomcamp-kestra/scripts/: etl_script.py
final_project/: .cache.sqlite  .gitignore  Dockerfile  Untitled.ipynb  docker-compose.yml  pyproject.toml
final_project/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
final_project/dbt_energy/macros/: train_wind_model.sql
final_project/dbt_energy/models/marts/: mart_cross_border_prices.sql  mart_weather_generation_engine.sql  mart_wind_feature_importance.sql
final_project/dbt_energy/models/staging/weather/: stg_weather__forecast_15min.sql
final_project/src/: config.py
final_project/src/ingestion/: extract_and_load_market_data.py  ingestion.py  mapping.py  smard_data.csv
final_project/src/pipeline/energy/: config.py  pipeline.py  transform.py
final_project/src/pipeline/weather/: config.py  pipeline.py  test.py  transform.py
final_project/src/utils/: data_helper.py  gcp_utils.py  http_utils.py  table_helper.py
week3/homework/: dev_script.ipynb  ingestion.py  ingestion_csv.py  pyproject.toml
week3/homework/.ipynb_checkpoints/: dev_script-checkpoint.ipynb
week3/instruction/: 3.1-optimization.md  3.2-bqml-training.md  3.3-export-serving.md  3.4-prediction-test.md
